--- a/docs/references/nextjs/route-handlers.mdx
+++ b/docs/references/nextjs/route-handlers.mdx
@@ -2,11 +2,12 @@
 title: Route Handlers
 description: Learn how to use Clerk with your Route Handlers.
 ---
+
 # Route Handlers
 
 Clerk provides helpers to allow you to protect your Route Handlers, fetch the current user, and interact with the Clerk API.
 
-## Protecting Route Handlers
+## Protect your Route Handlers
 
 If you aren't protecting your Route Handler using Clerk's middleware, you can check if the user is signed in.
 
@@ -27,7 +28,7 @@ export async function GET() {
 }
 ```
 
-## Retrieving data from external sources
+## Retrieve data from external sources
 
 Clerk provides integrations with a number of popular databases. Below is an example of retrieving a template to be used.
 
@@ -42,7 +43,7 @@ export async function GET() {
   }
 
   const token = await getToken({ template: "supabase" });
-  
+
   // Fetch data from Supabase and return it.
   const data = { supabaseData: 'Hello World' };
 
@@ -68,9 +69,9 @@ export async function GET() {
 }
 ```
 
-## Interacting with Clerk's API
+## Interact with Clerk's API
 
-The `clerkClient` helper allows you to retrieve and update data from Clerk's API. 
+The `clerkClient` helper allows you to retrieve and update data from Clerk's API.
 
 ```ts filename="app/api/route.ts"
 import { NextResponse, NextRequest } from 'next/server';
@@ -80,7 +81,7 @@ export async function POST(req:NextRequest) {
   const { userId } = auth();
 
   if (!userId) return NextResponse.redirect(new URL('/sign-in',req.url));
-  
+
   const params = { firstName: 'John', lastName: 'Wick' };
 
   const user = await clerkClient.users.updateUser(userId, params);
