--- a/docs/upgrade-guides/core-2/nextjs.mdx
+++ b/docs/upgrade-guides/core-2/nextjs.mdx
@@ -105,6 +105,7 @@ The new version ships with improved design and UX across all of Clerk's [UI comp
 
 User and customer feedback about `authMiddleware()` has been clear in that Middleware logic was a often friction point. As such, in v5 you will find a completely new Middleware helper called [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) that should alleviate the issues folks had with `authMiddleware()`.
 
+{/* TODO: Jeff to remove per page and per layout auth protection in favor of middleware protection */}
 Additionally, there are now new helpers that enable controlling auth on a _per-page and/or per-layout basis_ when using App Router. While you can still configure which routes are protected via Middleware, the page-based protection strategy is what is now recommended, as the co-location of auth protection configuration with the code for the pages themselves results in a superior developer experience that adds clarity as you navigate your codebase.
 
 #### Per-route auth config
@@ -144,11 +145,7 @@ Sometimes, code speaks louder than words. Let's get right into an example:
 
 In this example, you add [`auth().protect()`](/docs/references/nextjs/auth#protect) to a layout and that layout and all of it's children will be gated by auth. The same logic can be applied for pages.
 
-For more details on route protection, check out the following guides:
-- [Requiring authentication for route protection](/docs/references/nextjs/route-protection-requiring-authentication)
-- [Required authorization for route protection](/docs/references/nextjs/route-protection-requiring-authorization)
-
-If you are using the pages router, per-route gating won't work. Instead, configure your auth gating via Middleware as described in the next section.
+For more details on route protection, check out the [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) documentation.
 
 #### Middleware auth config
 
@@ -183,7 +180,7 @@ A couple things to note here:
 
 #### Migrating to `clerkMiddleware()`
 
-Clerk strongly recommends migrating to the new `clerkMiddleware()` for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your Middleware setup this version.
+Clerk strongly recommends migrating to the new [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your Middleware setup this version.
 
 The most basic migration will be updating the import and changing out the default export, then mirroring the previous behavior of protecting all routes as such:
 
@@ -199,11 +196,7 @@ The most basic migration will be updating the import and changing out the defaul
   }
 ```
 
-Of course, in most cases you'll have a more complicated setup than this. You can find some examples below for how to migrate a few common use cases. Be sure to review the following guides if your specific use case is not mentioned:
-
-- [`clerkMiddleware()` documentation](/docs/references/nextjs/clerk-middleware)
-- [Requiring authentication for route protection](/docs/references/nextjs/route-protection-requiring-authentication)
-- [Required authorization for route protection](/docs/references/nextjs/route-protection-requiring-authorization)
+Of course, in most cases you'll have a more complicated setup than this. You can find some examples below for how to migrate a few common use cases.
 
 <Accordion titles={["Protecting all routes except one or more public paths", "Protecting a single route path", "Combining with other Middlewares (like i18n)"]} heading="h4">
   <AccordionPanel>
