remove route protection pages

--- a/docs/references/nextjs/route-handlers.mdx
+++ b/docs/references/nextjs/route-handlers.mdx
@@ -2,11 +2,12 @@
 title: Route Handlers
 description: Learn how to use Clerk with your Route Handlers.
 ---
+
 # Route Handlers
 
 Clerk provides helpers to allow you to protect your Route Handlers, fetch the current user, and interact with the Clerk API.
 
-## Protecting Route Handlers
+## Protect your Route Handlers
 
 If you aren't protecting your Route Handler using Clerk's middleware, you can check if the user is signed in.
 
@@ -27,7 +28,7 @@ export async function GET() {
 }
 ```
 
-## Retrieving data from external sources
+## Retrieve data from external sources
 
 Clerk provides integrations with a number of popular databases. Below is an example of retrieving a template to be used.
 
@@ -68,7 +69,7 @@ export async function GET() {
 }
 ```
 
-## Interacting with Clerk's API
+## Interact with Clerk's API
 
 The `clerkClient` helper allows you to retrieve and update data from Clerk's API.
 
