--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -17,7 +17,7 @@ function setSession(
 ```
 
 <Callout type="danger">
-  `Clerk.setSession()` is deprecated and will be removed in the [Core 2](https://beta.clerk.com/docs) version of Clerk. Please use [`setActive()`](#set-active) instead.
+  `Clerk.setSession()` is deprecated and will be removed in the [Core 2](https://beta.clerk.com/docs) version of Clerk. Use [`setActive()`](#set-active) instead.
 </Callout>
 
 Set the current session on this client to the provided session. The provided session can be either a complete [`Session`](/docs/references/javascript/session) object or simply its unique identifier.
