--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -1,11 +1,11 @@
 ---
 title: Session methods
-description: These are all methods on the Clerk class that help you manage the active session and/or organization.
+description: Explore methods on the Clerk class that help you manage the active session and/or organization.
 ---
 
 # Session methods
 
-These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage the active session and/or organization.
+These methods on the [`Clerk`](/docs/references/javascript/clerk/clerk) class help you manage the active session and/or organization.
 
 ## `setSession()` (deprecated)
 
@@ -17,25 +17,25 @@ function setSession(
 ```
 
 <Callout type="danger">
-  Deprecated in favor of [`setActive()`](#set-active).
+  `Clerk.setSession()` is deprecated and will be removed in the [Core 2](https://beta.clerk.com/docs) version of Clerk. Use [`setActive()`](#set-active) instead.
 </Callout>
 
-Set the current session on this client to the provided session. The provided session can be either a complete [`Session`][session-ref] object or simply its unique identifier.
+Set the current session on this client to the provided session. The provided session can be either a complete [`Session`](/docs/references/javascript/session) object or simply its unique identifier.
 
 Passing null as the session will result in the current session to be removed from the client.
 
 If an active session already exists, it will be replaced with the new one. The change happens in three steps:
 
-1. The current [`Session`][session-ref] object is set to `undefined`, which causes the control components to stop rendering their children as though Clerk is still initializing.
+1. The current `Session` object is set to `undefined`, which causes the control components to stop rendering their children as though Clerk is still initializing.
 2. The `beforeEmit` callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
-3. The current [`Session`][session-ref] is set to the passed `session`. This causes the control components to render their children again.
+3. The current `Session` is set to the passed `session`. This causes the control components to render their children again.
 
 ### Properties
 
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `session` | [`Session`][session-ref] \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or `null` to simply remove the active session, without setting a new one. |
+| `session` | [`Session`](/docs/references/javascript/session) \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or `null` to simply remove the active session, without setting a new one. |
 | `beforeEmit?` | `(session: Session \| null) => Promise<any>` | Callback that will trigger when the current session is set to `undefined`, before finally being set to the passed session. Usually used for navigation. |
 
 ### Returns
@@ -46,6 +46,8 @@ If an active session already exists, it will be replaced with the new one. The c
 
 ## `setActive()`
 
+A method used to set the active session and/or organization.
+
 ```typescript
 function setActive({
   session,
@@ -54,20 +56,18 @@ function setActive({
 }: SetActiveParams): Promise<void>;
 ```
 
-A method used to set the active session and/or organization.
-
 ### `SetActiveParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `session` | [`Session`][session-ref] \| `string` \| `null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
-| `organization` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
+| `session?` | [`Session`](/docs/references/javascript/session) \| `string` \| `null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
+| `organization?` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
 | `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
 
-### Returns
+### `setActive()` example
 
-| Type | Description |
-| --- | --- |
-| `Promise<void>` | The `Promise` will resolve after the passed `session` or `organization` is set. |
+The `setActive()` method is most commonly used when building a [custom flow](/docs/custom-flows/overview) for your application.
 
-[session-ref]: /docs/references/javascript/session
+For example, during authentication, when a user signs in or signs up successfully, a new session is created. `setActive()` needs to be used to set the new session as the active session. See the implementation of this in the [Custom authentication flow](/docs/custom-flows/use-sign-up) guide.
+
+Another example is when a user switches organizations in a multi-organization application. `setActive()` needs to be used to set the new organization as the active organization. See the implementation of this in the [Custom organization switcher](/docs/organizations/custom-organization-switcher) guide.
