fix order of instructions for navigating in clerk dashboard

--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -23,8 +23,8 @@ The easiest way to add social connections is by using Clerk's [prebuilt componen
 For development instances, Clerk uses pre-configured shared OAuth credentials and redirect URIs to make the development flow as smooth as possible. This means that you can enable most social providers without additional configuration.
 
 To enable a social connection:
-1. Navigate to the Clerk Dashboard.
-2. Select your application, then select **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)** from the navigation sidebar.
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) and select your application.
+2. In the navigation sidebar, select **User & Authentication > Social Connections**.
 3. Toggle on the providers that you want to use.
 
 For production instances, you will need to configure the provider with your OAuth credentials. Don't worry, Clerk provides [dedicated guides](/docs/authentication/social-connections/overview) on how to do this for each provider.
