--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -21,8 +21,8 @@ This guide will show you how to customize a session token to include additional 
 
 ### Add custom claims to your session token
 
-1. Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions).
-2. Select your application, then select **Sessions** in the sidebar menu.
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions) and select your application.
+2. In the navigation sidebar, select **Sessions**.
 3. In the **Customize your session token** section, click the **Edit** button.
 4. In the modal that opens, you can add any claim to your session token that you need.
 
