--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -24,8 +24,8 @@ To implement the multi-session feature to your application, you need to handle t
 
 To enable multi-session in your application, you need to configure it in the Clerk Dashboard.
 
-1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions)
-2. Select your application, then select **Sessions** in the navigation sidebar.
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions) and select your application.
+2. In the navigation sidebar, select **Sessions**.
 3. Toggle on **Multi-session handling**.
 4. Select **Save changes**.
 
