--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -31,8 +31,8 @@ The Clerk Go SDK is organized using a resource-based structure similar to the [C
 Each API supports specific operations, like Create or List. While operations for each resource vary, a similar pattern is applied throughout Clerk Go.
 
 To execute API operations, you must configure Clerk Go with your Clerk secret key. To find your Clerk secret key:
-  - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
-  - Select your application, then select **🔑 API Keys** in the sidebar menu.
+  - Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys) and select your application.
+  - In the navigation sidebar, select **API Keys**.
   - In the **Secret Keys** section, you can copy your secret key. It is the same key across all frameworks.
 
 Depending on your use case,
