--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -59,8 +59,8 @@ pnpm add @clerk/nextjs
 
 1. If you don't have an `.env.local` file in the root directory of your Next.js project, create one now.
 2. Find your Clerk publishable key and secret key. If you're signed into Clerk, the `.env.local` snippet below will contain your keys. Otherwise:
-  - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
-  - Select your application, then select **🔑 API Keys** in the sidebar menu.
+  - Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys) and select your application.
+  - In the navigation sidebar, select **API Keys**.
   - You can copy your keys from the **Quick Copy** section.
 3. Add your keys to your `.env.local` file.
 
